[gd_scene load_steps=30 format=3 uid="uid://b7l8ewyqs7eb0"]

[ext_resource type="Script" path="res://scenes/SeaCritters.gd" id="1_4ykxu"]
[ext_resource type="PackedScene" uid="uid://oodcnjvspaj1" path="res://scenes/Starfish.tscn" id="1_vd2di"]
[ext_resource type="PackedScene" uid="uid://dwqio37dmwpcc" path="res://scenes/Octo.tscn" id="4_e40gs"]
[ext_resource type="Texture2D" uid="uid://dvt3huqdaavgh" path="res://graphics/bubble.png" id="5_gjjh7"]
[ext_resource type="Shader" uid="uid://bsy2o3luoejos" path="res://graphics/TerrainShader.tres" id="5_sf1xd"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_1lw3g"]
ground_color = Color(0.034, 0.0736, 0.1, 1)

[sub_resource type="Sky" id="Sky_4hssc"]
sky_material = SubResource("PhysicalSkyMaterial_1lw3g")

[sub_resource type="Environment" id="Environment_72o1c"]
background_mode = 2
sky = SubResource("Sky_4hssc")
tonemap_mode = 2
ssao_enabled = true
ssao_intensity = 16.0
ssao_power = 41.7863
ssao_horizon = 0.12
glow_enabled = true
glow_bloom = 0.71
volumetric_fog_enabled = true
volumetric_fog_density = 0.0791
volumetric_fog_albedo = Color(0.48, 1, 0.896, 1)
volumetric_fog_length = 30.0

[sub_resource type="Gradient" id="Gradient_gmiha"]
offsets = PackedFloat32Array(0, 0.674603, 1)
colors = PackedColorArray(0.2842, 0.58, 0.47647, 1, 0.3927, 0.51, 0.468945, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7vide"]
gradient = SubResource("Gradient_gmiha")
fill = 1
fill_from = Vector2(0.494737, 0.505263)
fill_to = Vector2(0.510526, 0.0421053)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tkwim"]
blend_mode = 1
shading_mode = 0
disable_ambient_light = true
disable_fog = true
albedo_texture = SubResource("GradientTexture2D_7vide")

[sub_resource type="QuadMesh" id="QuadMesh_gh8eg"]
material = SubResource("StandardMaterial3D_tkwim")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_4qiyp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j15dd"]
size = Vector3(10, 10, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_78ai0"]
size = Vector3(10, 10, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_3snnt"]
size = Vector3(10, 10, 10)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pfejn"]
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, 1, 0)
initial_velocity_max = 1.0
gravity = Vector3(1, 0, 0)
scale_min = 0.1
scale_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pyjce"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_gjjh7")
emission_enabled = true
emission = Color(0.75, 0.9, 1, 1)
backlight = Color(1, 1, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_jhjx7"]
material = SubResource("StandardMaterial3D_pyjce")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5lxej"]
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, 1, 0)
initial_velocity_max = 1.0
gravity = Vector3(-1, 0, 0)
scale_min = 0.1
scale_max = 0.2

[sub_resource type="Gradient" id="Gradient_0b45a"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5rc64"]
frequency = 0.0035

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_m4qar"]
in_3d_space = true
color_ramp = SubResource("Gradient_0b45a")
noise = SubResource("FastNoiseLite_5rc64")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0l6ht"]
in_3d_space = true
color_ramp = SubResource("Gradient_0b45a")
noise = SubResource("FastNoiseLite_5rc64")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2ouhq"]
albedo_color = Color(0.1504, 0.47, 0.368793, 1)
albedo_texture = SubResource("NoiseTexture2D_m4qar")
heightmap_enabled = true
heightmap_scale = 16.0
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
heightmap_texture = SubResource("NoiseTexture2D_0l6ht")

[sub_resource type="PlaneMesh" id="PlaneMesh_86606"]
material = SubResource("StandardMaterial3D_2ouhq")
size = Vector2(32, 32)
subdivide_width = 256
subdivide_depth = 256

[sub_resource type="ShaderMaterial" id="ShaderMaterial_whkea"]
render_priority = 0
shader = ExtResource("5_sf1xd")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_05ec1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0lcup"]
render_priority = 0
shader = ExtResource("5_sf1xd")

[node name="Main" type="Node3D" node_paths=PackedStringArray("previewFish", "tabs", "gravityWell")]
script = ExtResource("1_4ykxu")
previewFish = [NodePath("WorldEnvironment/Camera3D/PreviewStarfish"), NodePath("WorldEnvironment/Camera3D/Octo")]
tabs = NodePath("Control/UI/TabContainer")
gravityWell = NodePath("WorldEnvironment/pull center")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_72o1c")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.893317, -0.250986, 0.372816, 0, 0.829535, 0.558455, -0.449428, -0.498877, 0.741037, 0, 0, -11.7133)
light_indirect_energy = 0.205
light_volumetric_fog_energy = 0.215

[node name="OmniLight3D" type="OmniLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.88707, 0)
visible = false
light_color = Color(0.888, 1, 0.68, 1)
light_energy = 4.071
omni_range = 11.951

[node name="Camera3D" type="Camera3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.903448, 0.428699, 0, -0.428699, 0.903448, 0, 3.464, 3.85013)

[node name="PreviewStarfish" parent="WorldEnvironment/Camera3D" instance=ExtResource("1_vd2di")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.23, -0.485, -1.385)
sleeping = true
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldEnvironment/Camera3D/PreviewStarfish"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
mesh = SubResource("QuadMesh_gh8eg")

[node name="Octo" parent="WorldEnvironment/Camera3D" instance=ExtResource("4_e40gs")]
transform = Transform3D(1, 0, 0, 0, 0.903447, -0.428699, 0, 0.428699, 0.903447, 1.08989, -0.485, -1.385)
visible = false
sleeping = true
freeze = true

[node name="Floor" type="StaticBody3D" parent="WorldEnvironment"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/Floor"]
shape = SubResource("WorldBoundaryShape3D_4qiyp")

[node name="front" type="StaticBody3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 2.7097)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/front"]
shape = SubResource("WorldBoundaryShape3D_4qiyp")

[node name="back" type="StaticBody3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, -1, 0, 1, 1.31134e-07, 0, 0, -3.06947)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/back"]
shape = SubResource("WorldBoundaryShape3D_4qiyp")

[node name="left" type="StaticBody3D" parent="WorldEnvironment"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -4.91495, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/left"]
shape = SubResource("WorldBoundaryShape3D_4qiyp")

[node name="right" type="StaticBody3D" parent="WorldEnvironment"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 4.88067, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/right"]
shape = SubResource("WorldBoundaryShape3D_4qiyp")

[node name="push front" type="Area3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
priority = 3
gravity_space_override = 1
gravity_point_center = Vector3(1, 0, 0)
gravity_direction = Vector3(1, 0, 0)
gravity = 0.25

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/push front"]
shape = SubResource("BoxShape3D_j15dd")

[node name="push back" type="Area3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
priority = 2
gravity_space_override = 1
gravity_point_center = Vector3(-1, 0, 0)
gravity_direction = Vector3(-1, 0, 0)
gravity = 0.25

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/push back"]
shape = SubResource("BoxShape3D_78ai0")

[node name="pull center" type="Area3D" parent="WorldEnvironment"]
priority = 1
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)
gravity = 0.05

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/pull center"]
shape = SubResource("BoxShape3D_3snnt")

[node name="GPUParticles3D" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1352, -1.14897, 0)
lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_pfejn")
draw_pass_1 = SubResource("QuadMesh_jhjx7")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1079, -1.14897, -4.32657)
lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_5lxej")
draw_pass_1 = SubResource("QuadMesh_jhjx7")

[node name="Terrain" type="MeshInstance3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.53674e-07, -1.3326, -4.70411)
mesh = SubResource("PlaneMesh_86606")
surface_material_override/0 = SubResource("ShaderMaterial_whkea")

[node name="Terrain2" type="MeshInstance3D" parent="WorldEnvironment"]
transform = Transform3D(1.71965, 4.7247, -1.11466, -4.83942, 1.7614, 0, 0.381238, 1.04744, 5.02792, 6.105, 0.226, -5.088)
visible = false
mesh = SubResource("CapsuleMesh_05ec1")
surface_material_override/0 = SubResource("ShaderMaterial_0lcup")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="UI" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 242.0
offset_bottom = 419.0

[node name="Control" type="Control" parent="Control/UI"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Control/UI"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 0
current_tab = 0

[node name="Starfish" type="PanelContainer" parent="Control/UI/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="GridContainer" parent="Control/UI/TabContainer/Starfish"]
layout_mode = 2
columns = 3

[node name="Control2" type="Control" parent="Control/UI/TabContainer/Starfish/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/UI/TabContainer/Starfish/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Spawn"

[node name="RandomizeButton" type="Button" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="offs label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Offset"

[node name="offs" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 40.0
step = 0.0
value = 15.0

[node name="stroke label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stroke
"

[node name="stroke" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.0
value = 1.0

[node name="wobble label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wobble"

[node name="osc2" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 0.3
step = 0.0
value = 0.15

[node name="hue label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hue
"

[node name="hu" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0
step = 0.0

[node name="Rainbow label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rainbow
"

[node name="huc" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 2.0
step = 0.0
value = 0.1
exp_edit = true

[node name="dark label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dark"

[node name="dark" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="legs label" type="Label" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Legs"

[node name="legs" type="HSlider" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 12.0
value = 5.0

[node name="Control2" type="Control" parent="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control" type="Control" parent="Control/UI/TabContainer/Starfish/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Octo" type="PanelContainer" parent="Control/UI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="GridContainer" parent="Control/UI/TabContainer/Octo"]
layout_mode = 2
columns = 3

[node name="Control2" type="Control" parent="Control/UI/TabContainer/Octo/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/UI/TabContainer/Octo/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Spawn"

[node name="RandomizeButton" type="Button" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="offs label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Offset"

[node name="offs" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 40.0
step = 0.0
value = 15.0

[node name="stroke label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stroke
"

[node name="stroke" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.0
value = 1.0

[node name="wobble label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wobble"

[node name="osc2" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 0.3
step = 0.0
value = 0.15

[node name="hue label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hue
"

[node name="hu" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0
step = 0.0

[node name="Rainbow label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rainbow
"

[node name="huc" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 2.0
step = 0.0
value = 0.1
exp_edit = true

[node name="dark label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dark"

[node name="dark" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="legs label" type="Label" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Legs"

[node name="nil" type="HSlider" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 12.0
value = 5.0

[node name="Control2" type="Control" parent="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control" type="Control" parent="Control/UI/TabContainer/Octo/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Hide" type="Control" parent="Control/UI/TabContainer"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
metadata/_tab_index = 2

[connection signal="tab_changed" from="Control/UI/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/HBoxContainer/RandomizeButton" to="." method="_on_randomize_button_pressed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/offs" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/offs" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/stroke" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/stroke" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/osc2" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/osc2" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/hu" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/hu" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/huc" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/huc" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/dark" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/dark" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/legs" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Starfish/MarginContainer/VBoxContainer/legs" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/HBoxContainer/RandomizeButton" to="." method="_on_randomize_button_pressed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/offs" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/offs" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/stroke" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/stroke" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/osc2" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/osc2" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/hu" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/hu" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/huc" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/huc" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/dark" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/dark" to="." method="_on_slider_value_changed"]
[connection signal="drag_ended" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/nil" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Control/UI/TabContainer/Octo/MarginContainer/VBoxContainer/nil" to="." method="_on_slider_value_changed"]
